[tool.poetry]
name = "nonebot-plugin-kurogames"
version = "0.2.23"
description = "库洛游戏数据详情 谢比螺六~"
authors = ["ConcyWee <concywee@163.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ConcyWee/nonebot-plugin-kurogames"
repository = "https://github.com/ConcyWee/nonebot-plugin-kurogames"

[tool.poetry.dependencies]
python = ">=3.8"
nonebot2 = ">=2.2.1"
nonebot-adapter-onebot = ">=2.2.3"
httpx = ">=0.27.0"
jinja2 = ">=3.0.0"
playwright = ">=1.30.0"
pycryptodome = ">=3.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
